class Error(Exception):
    """Base error class."""
    pass
